force-app/main/default/objects/cgcloud__User_Exit_Content__c/cgcloud__User_Exit_Content__c.object-meta.xml
<CustomObject>
    <label>User Exit Content</label>
    <nameField>
        <displayFormat>UEC-{0000000}</displayFormat>
        <label>User Exit Content Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Exit Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>