force-app/main/default/objects/cgcloud__User_Exit_Content__c/fields/cgcloud__Content__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Content__c</fullName>
    <description>User Exit Code to Inject</description>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>