force-app/main/default/objects/cgcloud__User_Exit_Content__c/fields/cgcloud__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Sort Order of the user exit.</description>
    <label>Sort Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>