force-app/main/default/objects/cgcloud__User_Exit_Content__c/fields/cgcloud__Unique_Sort_For_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Sort_For_Type__c</fullName>
    <label>Unique Sort Order for User Exit Type</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>