force-app/main/default/objects/cgcloud__User_Exit_Content__c/fields/cgcloud__User_Exit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Exit__c</fullName>
    <label>User Exit</label>
    <referenceTo>cgcloud__User_Exit__c</referenceTo>
    <relationshipLabel>User Exit Content</relationshipLabel>
    <relationshipName>User_Exit_Content</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>